# family-dashboard

./: .env.example  .gitignore  CLAUDE.md  MUTANTS.md  README.md  commute-schedule.example.json  family-dashboard.md  hardware.md  session-prompts.md
.claude/: settings.json
.claude/commands/: frontend-design.md
.claude/hooks/: session-start.sh
backend/: MUTANTS.md  config.py  main.py  pyproject.toml  scheduler.py
backend/features/: incidents.feature
backend/routers/: calendar.py  dog_walk.py  travel.py  weather.py
backend/services/: commute_schedule.py  dog_walk.py
backend/tests/: test_calendar.py  test_commute_schedule.py  test_dog_walk.py  test_dog_walk_api.py  test_scheduler.py  test_travel.py  test_travel_dynamic.py  test_weather.py
docs/: route-map-design.md
features/: alert_banner.feature  calendar.feature  calendar_card.feature  clock.feature  dog_walk.feature  dog_walk_card.feature  dynamic_commutes.feature  dynamic_travel_card.feature  scheduler.feature  travel.feature  travel_card.feature  weather.feature  weather_card.feature  weather_per_destination.feature
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  stryker.config.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx
frontend/src/components/: AlertBanner.jsx  AlertBanner.test.jsx  CalendarCard.jsx  CalendarCard.test.jsx  ClockCard.jsx  ClockCard.test.jsx  DogWalkCard.jsx  DogWalkCard.test.jsx  RouteMap.jsx  RouteMap.test.jsx  TravelCard.jsx  TravelCard.test.jsx  WeatherCard.jsx  WeatherCard.test.jsx
frontend/src/utils/: decodePolyline.js  decodePolyline.test.js
