[project]
name = "family-dashboard-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "httpx",
    "apscheduler",
    "caldav",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mutmut",
]

[tool.setuptools.packages.find]
include = ["routers*", "services*"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mutmut]
paths_to_mutate = ["routers/travel.py", "routers/weather.py", "routers/calendar.py", "scheduler.py", "services/commute_schedule.py"]
tests_dir = ["tests/"]
also_copy = ["main.py", "config.py", "routers/__init__.py", "routers/calendar.py", "services/__init__.py", "commute-schedule.json"]
